# terraform_vacuum

./: HOW_TO_BUILD.md  pyproject.toml  requirements.txt
docs/: example.md
src/example_package_YOUR_USERNAME_HERE/: __init__.py
src/terraform_vaccum/: __init__.py
src/terraform_vaccum/renderers/: __init__.py
src/terraform_vaccum/template_processor/: _ExpressionParser.py  _Module.py  _ModuleManager.py  _Modules.py  _Template.py  __init__.py  _keywords.py  _mod_file.py  _mod_header.py  _mod_infra.py  _mod_loop.py  _mod_property.py  _mod_section.py  _mod_source.py  _module_processor.py  _template_processor.py
tests/: test2.py  test_cli.py  test_example.py  test_expression_parsing.py  test_modules.py  test_realistic.py  test_template.py
tests/data/: test.t.yml  vpc.t.yml
tests/data2/: instance.t.yml  test.t.yml
tests/realistic/: data.json  instance.t.yml  main.t.yml  variables.yml  vpc.t.yml
tests/scratch/: test.py  test2.py  test3.py
tests/scratch/data2/: test.t.yml
tests/scratch/renderers/: test_TRenderer.py
tests/template_parsing/: dummy.t.yml  simple.child.t.yml  simple.json  simple.t.yml
