[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform_vaccum"
version = "0.0.1"
authors = [
    { name="Robin LIORET", email="robin.lioret@capgemini.com" },
]
description = "Allows to create Terraform code from existing infrastructure."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://localhost"
"Bug Tracker" = "https://localhost"